# MagicSquare_0004

./: .gitignore  README.md  pyproject.toml
Prompting/: 01.MagicSquare_ProblemDefinition_Report_Prompt.md  02.MagicSquare_DualTrack_UI_Logic_TDD_Report_2026-04-27_Prompt.md  03.MagicSquare_CursorRules_Report_2026-04-27.md  04.MagicSquare_UserEntity_ECB_TDD_Report_2026-04-27.md  05.MagicSquare_UserJourney_EpicToTechnical_Report_2026-04-27.md  06.MagicSquare_PRD_DualTrack_Export_Report_2026-04-27.md  07.MagicSquare_Git_Init_And_Push_Report_2026-04-27.md  08.MagicSquare_README_C2C_GitHub_WorkSession_Report_2026-04-28.md  09.MagicSquare_TestCaseSpecification_Export_Report_2026-04-28.md  12.MagicSquare_WorkStatus_Export_Report_2026-04-28.md  13.MagicSquare_GreenAndGui_WorkSession_Report_2026-04-28.md  14.MagicSquare_RefactorAnalysis_And_BranchSetup_Report_2026-04-28.md
Report/: 01.MagicSquare_ProblemDefinition_Report.md  02.MagicSquare_DualTrack_UI_Logic_TDD_Report_2026-04-27.md  03.MagicSquare_CursorRules_Report_2026-04-27.md  04.MagicSquare_UserEntity_ECB_TDD_Report_2026-04-27.md  05.MagicSquare_UserJourney_EpicToTechnical_Report_2026-04-27.md  06.MagicSquare_PRD_DualTrack_Export_Report_2026-04-27.md  07.MagicSquare_README_ProjectExport_Report_2026-04-28.md  08.MagicSquare_README_C2C_GitHub_WorkSession_Report_2026-04-28.md  09.MagicSquare_TestCaseSpecification_Export_Report_2026-04-28.md  10.MagicSquare_DualTrack_RED_TestDesign_Export_Report_2026-04-28.md  11.MagicSquare_DevelopmentSession_Export_Report_2026-04-28.md  12.MagicSquare_WorkStatus_Export_Report_2026-04-28.md  (+3 more)
(+15 files in other folders)
