[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "magicsquare"
version = "0.1.0"
description = "Magic Square 4x4 - Dual-Track TDD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
gui = [
    "PyQt6>=6.7",
]

[tool.setuptools.packages.find]
where = ["src"]
